Source/WebCore/svg/graphics/filters/SVGFEImage.h
@@ -29,11 +29,14 @@
 
 namespace WebCore {
 
+class Document;
 class Image;
+class RenderObject;
 
 class FEImage : public FilterEffect {
 public:
-    static PassRefPtr<FEImage> create(Filter*, PassRefPtr<Image>, const SVGPreserveAspectRatio&);
+    static PassRefPtr<FEImage> createWithImage(Filter*, PassRefPtr<Image>, const SVGPreserveAspectRatio&);
+    static PassRefPtr<FEImage> createWithIRIReference(Filter*, Document*, const String&, const SVGPreserveAspectRatio&);
 
     void setAbsoluteSubregion(const FloatRect& absoluteSubregion) { m_absoluteSubregion = absoluteSubregion; }
 
@@ -47,9 +50,14 @@ public:
     virtual TextStream& externalRepresentation(TextStream&, int indention) const;
     
 private:
+    virtual ~FEImage() { }
     FEImage(Filter*, PassRefPtr<Image>, const SVGPreserveAspectRatio&);
+    FEImage(Filter*, Document*, const String&, const SVGPreserveAspectRatio&);
+    RenderObject* referencedRenderer() const;
 
     RefPtr<Image> m_image;
+    Document* m_document;
+    String m_href;
     SVGPreserveAspectRatio m_preserveAspectRatio;
     FloatRect m_absoluteSubregion;
 };
